# platformer

./: Background.cpp  Background.h  CMakeLists.txt  CollisionBox.cpp  CollisionBox.h  Platform.cpp  Platform.h  Player.cpp  Player.h  Tile.cpp  main.cpp
include/: CollisionBox.h  Platform.h  Player.h  Tile.h
src/: Background.cpp  CollisionBox.cpp  Platform.cpp  Player.cpp  Tile.cpp  main.cpp
